# chm

./: .chm_master.key  .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .fossa.yml  .gitignore  .gitleaks.toml  ACTUAL_100_COVERAGE_PLAN.md  ALIGNMENT_PLAN.md  ANTI_PATTERN_ALIGNMENT_ASSESSMENT.md  BADGE_SETUP.md  BADGE_STATUS_REPORT.md  BUILD_COMPARISON.md  CLAUDE-anti.md  CLAUDE-chm.md  CLAUDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COVERAGE_100_PERCENT_PLAN.md  COVERAGE_PLAN.md  DEPLOYMENT_CHECKLIST.md  DOCKER_BUILD_STATUS.md  DOCKER_PUBLIC_REPO_ANALYSIS.md  Dockerfile  GITHUB_ENVIRONMENTS_STATUS_PLAN.md  GITHUB_FOLDER_CLEANUP_PLAN.md  GITHUB_WORKFLOWS_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_BADGES_SETUP.md  SAFE_REMOVAL_ANALYSIS.md  SETUP_EXTERNAL_SERVICES.md  __init__.py  api-docs-report.json  app.py  chm_requirements.txt  codecov.yml  (+24 more)
.claude/: settings.local.json
.github/: SECRETS_SETUP.md  badges.json
.github/environments/: development.yml  production.yml  staging.yml
.github/workflows/: cd-optimized.yml  cd-simple.yml  cd.yml  ci-cd.yml  ci-cd.yml.disabled  ci.yml  ci.yml.disabled  fossa.yml  main-ci.yml  security.yml  test-coverage.yml  test-simple.yml  test.yml  trivy-security.yml  trivy-simple.yml
api/: __init__.py
api/v1/: MIGRATION_NOTICE.md  __init__.py  alerts.py  auth.py  devices.py  discovery.py  metrics.py  monitoring.py  notifications.py  router.py
backend/: Dockerfile  Dockerfile.dev  alembic.ini  config.py  env.example  main.py  migrate_db.py
backend/api/: exception_handlers.py  main.py  monitoring_api.py  websocket_handler.py  websocket_manager.py
backend/audit/: audit_logger.py
backend/auth/: jwt_auth.py  rbac.py
backend/collector/: performance_collector.py  service.py
backend/common/: error_classification.py  error_handler.py  exceptions.py  metrics.py  middleware.py  resource_protection.py  result_objects.py  security.py  utils.py  validation.py
backend/config/: config_manager.py
backend/core/: imports.py  orchestrator.py
backend/database/: base.py  circuit_breaker_service.py  connection_manager.py  connections.py  init.sql  migrate.py  migrations.py  models.py  monitoring_persistence.py  query_builder.py  redis_service.py  user_models.py  uuid_type.py
backend/discovery/: protocol_discovery.py  service.py  snmp_discovery.py
backend/distributed/: async_coordination.py  raft_consensus.py  state_manager.py
backend/import/: service.py
backend/middleware/: rate_limiter.py
backend/migrations/: env.py
backend/models/: alert.py  alert_rule.py  discovery_job.py  metric.py  notification.py
backend/monitoring/: __init__.py  connection_pool.py  monitoring_server.py  snmp_handler.py  ssh_handler.py
backend/protocols/: snmp_client.py  ssh_client.py
backend/resilience/: circuit_breaker.py  graceful_degradation.py
backend/security/: encryption.py  secret_rotation.py  secure_parser.py  ssh_security.py
backend/servers/: working_server.py
backend/services/: __init__.py  alert_engine.py  alert_service.py  asset_integration.py  audit_service.py  auth_service.py  background_tasks.py  cache_service.py  component_discovery.py  device_polling.py  device_service.py  (+23 more)
config/: .env.example  .pre-commit-config.yaml  codecov.yml  mypy.ini  pyproject.toml
core/: __init__.py  auth_middleware.py  config.py  database.py  middleware.py
data/: correct_devices.csv  final_import_devices.csv  valid_import_devices.csv
docs/: FEATURES.md  LIBRENMS_FEATURES_ROADMAP.md  SECURITY.md  SNMPV3_IMPLEMENTATION.md  STARTUP.md  deployment.md  implementation-plan.md  production-readiness.md  quick-start.md
frontend/: .eslintrc.js  Dockerfile  Dockerfile.dev  env.example  package-lock.json  package.json  tailwind.config.js
k8s/: README.md  celery.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  postgres.yaml  rbac.yaml  redis.yaml
models/: __init__.py  alert.py  alert_rule.py  analytics.py  device.py  device_credentials.py  discovery_job.py  metric.py  network_topology.py  notification.py  result_objects.py  security.py  user.py
monitoring/: docker-compose.monitoring.yml  prometheus.yml
nginx/: nginx.conf
scripts/: cleanup_excess.sh  complete_implementation.py  deploy-production.sh  init_db.py  phase1_fix_violations.py  quick_start.sh  security-hardening.sh  setup-badges.md  setup_external_services.py  validate_alignment.py
services/: access_control.py  advanced_reporting.py  advanced_threat_detection.py  alert_rules_engine.py  audit_logging.py  auth_service.py  compliance_monitoring.py  compliance_reporting.py  credential_manager.py  data_aggregation.py  device_classification.py  device_operations.py  incident_response.py  metrics_collection.py  metrics_processing.py  metrics_query.py  metrics_storage.py  network_discovery.py  network_discovery_service.py  network_monitoring_service.py  notification_service.py  performance_analytics.py  policy_engine.py  security_orchestration.py  threat_detection.py  topology_analysis.py  vulnerability_management.py
tests/: COVERAGE_100_PLAN.md  COVERAGE_ACHIEVEMENT_REPORT.md  COVERAGE_PLAN.md  __init__.py  conftest.py  conftest_advanced.py  conftest_mock.py  conftest_patch.py  patch_and_import.py  pytest.ini  setup_test_db.py  sqlite_compat.py  test_100_percent.py  test_100_percent_coverage.py  test_100_percent_coverage_real.py  test_100_percent_execution.py  test_achieve_100_coverage.py  test_alerting_system.py  test_analytics_system.py  test_api_comprehensive.py  test_api_endpoints.py  test_auth_api.py  test_auth_service.py  test_auth_service_boost.py  test_auth_service_coverage.py  test_basic.py  test_complete_100_coverage.py  test_complete_coverage.py  test_compliance_framework.py  test_comprehensive.py  test_comprehensive_100_percent.py  test_comprehensive_execution.py  test_coverage_100.py  test_coverage_boost.py  test_database_fix.py  test_discovery_service.py  test_final_100_coverage.py  test_force_100_coverage.py  test_full_coverage.py  test_health.py  (+29 more)
(+193 files in other folders)
